ComboStrap/LogicalSqlAntlr/Gen/logicalSqlParser.php
<?php

/*
 * Generated from D:/dokuwiki/lib/plugins/combo/grammar\logicalSql.g4 by ANTLR 4.9.1
 */

namespace ComboStrap\LogicalSqlAntlr\Gen {
	use Antlr\Antlr4\Runtime\Atn\ATN;
	use Antlr\Antlr4\Runtime\Atn\ATNDeserializer;
	use Antlr\Antlr4\Runtime\Atn\ParserATNSimulator;
	use Antlr\Antlr4\Runtime\Dfa\DFA;
	use Antlr\Antlr4\Runtime\Error\Exceptions\FailedPredicateException;
	use Antlr\Antlr4\Runtime\Error\Exceptions\NoViableAltException;
	use Antlr\Antlr4\Runtime\PredictionContexts\PredictionContextCache;
	use Antlr\Antlr4\Runtime\Error\Exceptions\RecognitionException;
	use Antlr\Antlr4\Runtime\RuleContext;
	use Antlr\Antlr4\Runtime\Token;
	use Antlr\Antlr4\Runtime\TokenStream;
	use Antlr\Antlr4\Runtime\Vocabulary;
	use Antlr\Antlr4\Runtime\VocabularyImpl;
	use Antlr\Antlr4\Runtime\RuntimeMetaData;
	use Antlr\Antlr4\Runtime\Parser;

	final class logicalSqlParser extends Parser
	{
		public const SCOL = 1, DOT = 2, OPEN_PAR = 3, CLOSE_PAR = 4, COMMA = 5, 
               ASSIGN = 6, STAR = 7, PLUS = 8, MINUS = 9, TILDE = 10, PIPE2 = 11, 
               DIV = 12, MOD = 13, LT2 = 14, GT2 = 15, AMP = 16, PIPE = 17, 
               LT = 18, LT_EQ = 19, GT = 20, GT_EQ = 21, EQ = 22, NOT_EQ1 = 23, 
               NOT_EQ2 = 24, AND_ = 25, AS_ = 26, ASC_ = 27, BETWEEN_ = 28, 
               BY_ = 29, DESC_ = 30, FALSE_ = 31, FROM_ = 32, GLOB_ = 33, 
               IN_ = 34, IS_ = 35, ISNULL_ = 36, LIKE_ = 37, LIMIT_ = 38, 
               NOT_ = 39, NOTNULL_ = 40, NOW_ = 41, NULL_ = 42, OR_ = 43, 
               ORDER_ = 44, SELECT_ = 45, TRUE_ = 46, WHERE_ = 47, SPACES = 48, 
               NUMERIC_LITERAL = 49, STRING_LITERAL = 50, IDENTIFIER = 51;

		public const RULE_result_column = 0, RULE_column_alias = 1, RULE_literal_value = 2, 
               RULE_predicate_expression = 3, RULE_logicalSql = 4, RULE_table_name = 5, 
               RULE_column_name = 6, RULE_any_name = 7, RULE_limit_stmt = 8, 
               RULE_order_by_stmt = 9, RULE_ordering_term = 10, RULE_asc_desc = 11;

		/**
		 * @var array<string>
		 */
		public const RULE_NAMES = [
			'result_column', 'column_alias', 'literal_value', 'predicate_expression', 
			'logicalSql', 'table_name', 'column_name', 'any_name', 'limit_stmt', 
			'order_by_stmt', 'ordering_term', 'asc_desc'
		];

		/**
		 * @var array<string|null>
		 */
		private const LITERAL_NAMES = [
		    null, "';'", "'.'", "'('", "')'", "','", "'='", "'*'", "'+'", "'-'", 
		    "'~'", "'||'", "'/'", "'%'", "'<<'", "'>>'", "'&'", "'|'", "'<'", 
		    "'<='", "'>'", "'>='", "'=='", "'!='", "'<>'"
		];

		/**
		 * @var array<string>
		 */
		private const SYMBOLIC_NAMES = [
		    null, "SCOL", "DOT", "OPEN_PAR", "CLOSE_PAR", "COMMA", "ASSIGN", "STAR", 
		    "PLUS", "MINUS", "TILDE", "PIPE2", "DIV", "MOD", "LT2", "GT2", "AMP", 
		    "PIPE", "LT", "LT_EQ", "GT", "GT_EQ", "EQ", "NOT_EQ1", "NOT_EQ2", 
		    "AND_", "AS_", "ASC_", "BETWEEN_", "BY_", "DESC_", "FALSE_", "FROM_", 
		    "GLOB_", "IN_", "IS_", "ISNULL_", "LIKE_", "LIMIT_", "NOT_", "NOTNULL_", 
		    "NOW_", "NULL_", "OR_", "ORDER_", "SELECT_", "TRUE_", "WHERE_", "SPACES", 
		    "NUMERIC_LITERAL", "STRING_LITERAL", "IDENTIFIER"
		];

		/**
		 * @var string
		 */
		private const SERIALIZED_ATN =
			"\u{3}\u{608B}\u{A72A}\u{8133}\u{B9ED}\u{417C}\u{3BE7}\u{7786}\u{5964}" .
		    "\u{3}\u{35}\u{89}\u{4}\u{2}\u{9}\u{2}\u{4}\u{3}\u{9}\u{3}\u{4}\u{4}" .
		    "\u{9}\u{4}\u{4}\u{5}\u{9}\u{5}\u{4}\u{6}\u{9}\u{6}\u{4}\u{7}\u{9}" .
		    "\u{7}\u{4}\u{8}\u{9}\u{8}\u{4}\u{9}\u{9}\u{9}\u{4}\u{A}\u{9}\u{A}" .
		    "\u{4}\u{B}\u{9}\u{B}\u{4}\u{C}\u{9}\u{C}\u{4}\u{D}\u{9}\u{D}\u{3}" .
		    "\u{2}\u{3}\u{2}\u{3}\u{2}\u{5}\u{2}\u{1E}\u{A}\u{2}\u{3}\u{2}\u{5}" .
		    "\u{2}\u{21}\u{A}\u{2}\u{3}\u{2}\u{5}\u{2}\u{24}\u{A}\u{2}\u{3}\u{3}" .
		    "\u{3}\u{3}\u{3}\u{4}\u{3}\u{4}\u{3}\u{5}\u{3}\u{5}\u{3}\u{5}\u{3}" .
		    "\u{5}\u{5}\u{5}\u{2E}\u{A}\u{5}\u{3}\u{5}\u{3}\u{5}\u{3}\u{5}\u{5}" .
		    "\u{5}\u{33}\u{A}\u{5}\u{3}\u{5}\u{5}\u{5}\u{36}\u{A}\u{5}\u{3}\u{5}" .
		    "\u{3}\u{5}\u{3}\u{5}\u{3}\u{5}\u{3}\u{5}\u{3}\u{5}\u{5}\u{5}\u{3E}" .
		    "\u{A}\u{5}\u{3}\u{5}\u{3}\u{5}\u{3}\u{5}\u{3}\u{5}\u{3}\u{5}\u{7}" .
		    "\u{5}\u{45}\u{A}\u{5}\u{C}\u{5}\u{E}\u{5}\u{48}\u{B}\u{5}\u{5}\u{5}" .
		    "\u{4A}\u{A}\u{5}\u{3}\u{5}\u{5}\u{5}\u{4D}\u{A}\u{5}\u{3}\u{6}\u{3}" .
		    "\u{6}\u{3}\u{6}\u{3}\u{6}\u{7}\u{6}\u{53}\u{A}\u{6}\u{C}\u{6}\u{E}" .
		    "\u{6}\u{56}\u{B}\u{6}\u{3}\u{6}\u{3}\u{6}\u{5}\u{6}\u{5A}\u{A}\u{6}" .
		    "\u{3}\u{6}\u{3}\u{6}\u{3}\u{6}\u{3}\u{6}\u{5}\u{6}\u{60}\u{A}\u{6}" .
		    "\u{5}\u{6}\u{62}\u{A}\u{6}\u{3}\u{6}\u{5}\u{6}\u{65}\u{A}\u{6}\u{3}" .
		    "\u{6}\u{5}\u{6}\u{68}\u{A}\u{6}\u{3}\u{7}\u{3}\u{7}\u{3}\u{8}\u{3}" .
		    "\u{8}\u{3}\u{9}\u{3}\u{9}\u{3}\u{9}\u{3}\u{9}\u{3}\u{9}\u{3}\u{9}" .
		    "\u{5}\u{9}\u{74}\u{A}\u{9}\u{3}\u{A}\u{3}\u{A}\u{3}\u{A}\u{3}\u{B}" .
		    "\u{3}\u{B}\u{3}\u{B}\u{3}\u{B}\u{3}\u{B}\u{7}\u{B}\u{7E}\u{A}\u{B}" .
		    "\u{C}\u{B}\u{E}\u{B}\u{81}\u{B}\u{B}\u{3}\u{C}\u{3}\u{C}\u{5}\u{C}" .
		    "\u{85}\u{A}\u{C}\u{3}\u{D}\u{3}\u{D}\u{3}\u{D}\u{2}\u{2}\u{E}\u{2}" .
		    "\u{4}\u{6}\u{8}\u{A}\u{C}\u{E}\u{10}\u{12}\u{14}\u{16}\u{18}\u{2}" .
		    "\u{7}\u{3}\u{2}\u{34}\u{35}\u{6}\u{2}\u{21}\u{21}\u{2B}\u{2C}\u{30}" .
		    "\u{30}\u{33}\u{34}\u{5}\u{2}\u{8}\u{8}\u{14}\u{17}\u{19}\u{19}\u{4}" .
		    "\u{2}\u{1B}\u{1B}\u{2D}\u{2D}\u{4}\u{2}\u{1D}\u{1D}\u{20}\u{20}\u{2}" .
		    "\u{93}\u{2}\u{1A}\u{3}\u{2}\u{2}\u{2}\u{4}\u{25}\u{3}\u{2}\u{2}\u{2}" .
		    "\u{6}\u{27}\u{3}\u{2}\u{2}\u{2}\u{8}\u{29}\u{3}\u{2}\u{2}\u{2}\u{A}" .
		    "\u{4E}\u{3}\u{2}\u{2}\u{2}\u{C}\u{69}\u{3}\u{2}\u{2}\u{2}\u{E}\u{6B}" .
		    "\u{3}\u{2}\u{2}\u{2}\u{10}\u{73}\u{3}\u{2}\u{2}\u{2}\u{12}\u{75}\u{3}" .
		    "\u{2}\u{2}\u{2}\u{14}\u{78}\u{3}\u{2}\u{2}\u{2}\u{16}\u{82}\u{3}\u{2}" .
		    "\u{2}\u{2}\u{18}\u{86}\u{3}\u{2}\u{2}\u{2}\u{1A}\u{1D}\u{7}\u{35}" .
		    "\u{2}\u{2}\u{1B}\u{1C}\u{7}\u{4}\u{2}\u{2}\u{1C}\u{1E}\u{7}\u{35}" .
		    "\u{2}\u{2}\u{1D}\u{1B}\u{3}\u{2}\u{2}\u{2}\u{1D}\u{1E}\u{3}\u{2}\u{2}" .
		    "\u{2}\u{1E}\u{23}\u{3}\u{2}\u{2}\u{2}\u{1F}\u{21}\u{7}\u{1C}\u{2}" .
		    "\u{2}\u{20}\u{1F}\u{3}\u{2}\u{2}\u{2}\u{20}\u{21}\u{3}\u{2}\u{2}\u{2}" .
		    "\u{21}\u{22}\u{3}\u{2}\u{2}\u{2}\u{22}\u{24}\u{5}\u{4}\u{3}\u{2}\u{23}" .
		    "\u{20}\u{3}\u{2}\u{2}\u{2}\u{23}\u{24}\u{3}\u{2}\u{2}\u{2}\u{24}\u{3}" .
		    "\u{3}\u{2}\u{2}\u{2}\u{25}\u{26}\u{9}\u{2}\u{2}\u{2}\u{26}\u{5}\u{3}" .
		    "\u{2}\u{2}\u{2}\u{27}\u{28}\u{9}\u{3}\u{2}\u{2}\u{28}\u{7}\u{3}\u{2}" .
		    "\u{2}\u{2}\u{29}\u{4C}\u{5}\u{E}\u{8}\u{2}\u{2A}\u{2B}\u{9}\u{4}\u{2}" .
		    "\u{2}\u{2B}\u{4D}\u{5}\u{6}\u{4}\u{2}\u{2C}\u{2E}\u{7}\u{29}\u{2}" .
		    "\u{2}\u{2D}\u{2C}\u{3}\u{2}\u{2}\u{2}\u{2D}\u{2E}\u{3}\u{2}\u{2}\u{2}" .
		    "\u{2E}\u{32}\u{3}\u{2}\u{2}\u{2}\u{2F}\u{33}\u{7}\u{27}\u{2}\u{2}" .
		    "\u{30}\u{33}\u{7}\u{23}\u{2}\u{2}\u{31}\u{33}\u{5}\u{6}\u{4}\u{2}" .
		    "\u{32}\u{2F}\u{3}\u{2}\u{2}\u{2}\u{32}\u{30}\u{3}\u{2}\u{2}\u{2}\u{32}" .
		    "\u{31}\u{3}\u{2}\u{2}\u{2}\u{33}\u{4D}\u{3}\u{2}\u{2}\u{2}\u{34}\u{36}" .
		    "\u{7}\u{29}\u{2}\u{2}\u{35}\u{34}\u{3}\u{2}\u{2}\u{2}\u{35}\u{36}" .
		    "\u{3}\u{2}\u{2}\u{2}\u{36}\u{37}\u{3}\u{2}\u{2}\u{2}\u{37}\u{38}\u{7}" .
		    "\u{1E}\u{2}\u{2}\u{38}\u{39}\u{5}\u{6}\u{4}\u{2}\u{39}\u{3A}\u{7}" .
		    "\u{1B}\u{2}\u{2}\u{3A}\u{3B}\u{5}\u{6}\u{4}\u{2}\u{3B}\u{4D}\u{3}" .
		    "\u{2}\u{2}\u{2}\u{3C}\u{3E}\u{7}\u{29}\u{2}\u{2}\u{3D}\u{3C}\u{3}" .
		    "\u{2}\u{2}\u{2}\u{3D}\u{3E}\u{3}\u{2}\u{2}\u{2}\u{3E}\u{3F}\u{3}\u{2}" .
		    "\u{2}\u{2}\u{3F}\u{40}\u{7}\u{24}\u{2}\u{2}\u{40}\u{49}\u{7}\u{5}" .
		    "\u{2}\u{2}\u{41}\u{46}\u{5}\u{6}\u{4}\u{2}\u{42}\u{43}\u{7}\u{7}\u{2}" .
		    "\u{2}\u{43}\u{45}\u{5}\u{6}\u{4}\u{2}\u{44}\u{42}\u{3}\u{2}\u{2}\u{2}" .
		    "\u{45}\u{48}\u{3}\u{2}\u{2}\u{2}\u{46}\u{44}\u{3}\u{2}\u{2}\u{2}\u{46}" .
		    "\u{47}\u{3}\u{2}\u{2}\u{2}\u{47}\u{4A}\u{3}\u{2}\u{2}\u{2}\u{48}\u{46}" .
		    "\u{3}\u{2}\u{2}\u{2}\u{49}\u{41}\u{3}\u{2}\u{2}\u{2}\u{49}\u{4A}\u{3}" .
		    "\u{2}\u{2}\u{2}\u{4A}\u{4B}\u{3}\u{2}\u{2}\u{2}\u{4B}\u{4D}\u{7}\u{6}" .
		    "\u{2}\u{2}\u{4C}\u{2A}\u{3}\u{2}\u{2}\u{2}\u{4C}\u{2D}\u{3}\u{2}\u{2}" .
		    "\u{2}\u{4C}\u{35}\u{3}\u{2}\u{2}\u{2}\u{4C}\u{3D}\u{3}\u{2}\u{2}\u{2}" .
		    "\u{4D}\u{9}\u{3}\u{2}\u{2}\u{2}\u{4E}\u{4F}\u{7}\u{2F}\u{2}\u{2}\u{4F}" .
		    "\u{54}\u{5}\u{2}\u{2}\u{2}\u{50}\u{51}\u{7}\u{7}\u{2}\u{2}\u{51}\u{53}" .
		    "\u{5}\u{2}\u{2}\u{2}\u{52}\u{50}\u{3}\u{2}\u{2}\u{2}\u{53}\u{56}\u{3}" .
		    "\u{2}\u{2}\u{2}\u{54}\u{52}\u{3}\u{2}\u{2}\u{2}\u{54}\u{55}\u{3}\u{2}" .
		    "\u{2}\u{2}\u{55}\u{59}\u{3}\u{2}\u{2}\u{2}\u{56}\u{54}\u{3}\u{2}\u{2}" .
		    "\u{2}\u{57}\u{58}\u{7}\u{22}\u{2}\u{2}\u{58}\u{5A}\u{5}\u{C}\u{7}" .
		    "\u{2}\u{59}\u{57}\u{3}\u{2}\u{2}\u{2}\u{59}\u{5A}\u{3}\u{2}\u{2}\u{2}" .
		    "\u{5A}\u{61}\u{3}\u{2}\u{2}\u{2}\u{5B}\u{5C}\u{7}\u{31}\u{2}\u{2}" .
		    "\u{5C}\u{5F}\u{5}\u{8}\u{5}\u{2}\u{5D}\u{5E}\u{9}\u{5}\u{2}\u{2}\u{5E}" .
		    "\u{60}\u{5}\u{8}\u{5}\u{2}\u{5F}\u{5D}\u{3}\u{2}\u{2}\u{2}\u{5F}\u{60}" .
		    "\u{3}\u{2}\u{2}\u{2}\u{60}\u{62}\u{3}\u{2}\u{2}\u{2}\u{61}\u{5B}\u{3}" .
		    "\u{2}\u{2}\u{2}\u{61}\u{62}\u{3}\u{2}\u{2}\u{2}\u{62}\u{64}\u{3}\u{2}" .
		    "\u{2}\u{2}\u{63}\u{65}\u{5}\u{14}\u{B}\u{2}\u{64}\u{63}\u{3}\u{2}" .
		    "\u{2}\u{2}\u{64}\u{65}\u{3}\u{2}\u{2}\u{2}\u{65}\u{67}\u{3}\u{2}\u{2}" .
		    "\u{2}\u{66}\u{68}\u{5}\u{12}\u{A}\u{2}\u{67}\u{66}\u{3}\u{2}\u{2}" .
		    "\u{2}\u{67}\u{68}\u{3}\u{2}\u{2}\u{2}\u{68}\u{B}\u{3}\u{2}\u{2}\u{2}" .
		    "\u{69}\u{6A}\u{5}\u{10}\u{9}\u{2}\u{6A}\u{D}\u{3}\u{2}\u{2}\u{2}\u{6B}" .
		    "\u{6C}\u{5}\u{10}\u{9}\u{2}\u{6C}\u{F}\u{3}\u{2}\u{2}\u{2}\u{6D}\u{74}" .
		    "\u{7}\u{35}\u{2}\u{2}\u{6E}\u{74}\u{7}\u{34}\u{2}\u{2}\u{6F}\u{70}" .
		    "\u{7}\u{5}\u{2}\u{2}\u{70}\u{71}\u{5}\u{10}\u{9}\u{2}\u{71}\u{72}" .
		    "\u{7}\u{6}\u{2}\u{2}\u{72}\u{74}\u{3}\u{2}\u{2}\u{2}\u{73}\u{6D}\u{3}" .
		    "\u{2}\u{2}\u{2}\u{73}\u{6E}\u{3}\u{2}\u{2}\u{2}\u{73}\u{6F}\u{3}\u{2}" .
		    "\u{2}\u{2}\u{74}\u{11}\u{3}\u{2}\u{2}\u{2}\u{75}\u{76}\u{7}\u{28}" .
		    "\u{2}\u{2}\u{76}\u{77}\u{7}\u{33}\u{2}\u{2}\u{77}\u{13}\u{3}\u{2}" .
		    "\u{2}\u{2}\u{78}\u{79}\u{7}\u{2E}\u{2}\u{2}\u{79}\u{7A}\u{7}\u{1F}" .
		    "\u{2}\u{2}\u{7A}\u{7F}\u{5}\u{16}\u{C}\u{2}\u{7B}\u{7C}\u{7}\u{7}" .
		    "\u{2}\u{2}\u{7C}\u{7E}\u{5}\u{16}\u{C}\u{2}\u{7D}\u{7B}\u{3}\u{2}" .
		    "\u{2}\u{2}\u{7E}\u{81}\u{3}\u{2}\u{2}\u{2}\u{7F}\u{7D}\u{3}\u{2}\u{2}" .
		    "\u{2}\u{7F}\u{80}\u{3}\u{2}\u{2}\u{2}\u{80}\u{15}\u{3}\u{2}\u{2}\u{2}" .
		    "\u{81}\u{7F}\u{3}\u{2}\u{2}\u{2}\u{82}\u{84}\u{5}\u{E}\u{8}\u{2}\u{83}" .
		    "\u{85}\u{5}\u{18}\u{D}\u{2}\u{84}\u{83}\u{3}\u{2}\u{2}\u{2}\u{84}" .
		    "\u{85}\u{3}\u{2}\u{2}\u{2}\u{85}\u{17}\u{3}\u{2}\u{2}\u{2}\u{86}\u{87}" .
		    "\u{9}\u{6}\u{2}\u{2}\u{87}\u{19}\u{3}\u{2}\u{2}\u{2}\u{15}\u{1D}\u{20}" .
		    "\u{23}\u{2D}\u{32}\u{35}\u{3D}\u{46}\u{49}\u{4C}\u{54}\u{59}\u{5F}" .
		    "\u{61}\u{64}\u{67}\u{73}\u{7F}\u{84}";

		protected static $atn;
		protected static $decisionToDFA;
		protected static $sharedContextCache;

		public function __construct(TokenStream $input)
		{
			parent::__construct($input);

			self::initialize();

			$this->interp = new ParserATNSimulator($this, self::$atn, self::$decisionToDFA, self::$sharedContextCache);
		}

		private static function initialize() : void
		{
			if (self::$atn !== null) {
				return;
			}

			RuntimeMetaData::checkVersion('4.9.1', RuntimeMetaData::VERSION);

			$atn = (new ATNDeserializer())->deserialize(self::SERIALIZED_ATN);

			$decisionToDFA = [];
			for ($i = 0, $count = $atn->getNumberOfDecisions(); $i < $count; $i++) {
				$decisionToDFA[] = new DFA($atn->getDecisionState($i), $i);
			}

			self::$atn = $atn;
			self::$decisionToDFA = $decisionToDFA;
			self::$sharedContextCache = new PredictionContextCache();
		}

		public function getGrammarFileName() : string
		{
			return "logicalSql.g4";
		}

		public function getRuleNames() : array
		{
			return self::RULE_NAMES;
		}

		public function getSerializedATN() : string
		{
			return self::SERIALIZED_ATN;
		}

		public function getATN() : ATN
		{
			return self::$atn;
		}

		public function getVocabulary() : Vocabulary
        {
            static $vocabulary;

			return $vocabulary = $vocabulary ?? new VocabularyImpl(self::LITERAL_NAMES, self::SYMBOLIC_NAMES);
        }

		/**
		 * @throws RecognitionException
		 */
		public function result_column() : Context\Result_columnContext
		{
		    $localContext = new Context\Result_columnContext($this->ctx, $this->getState());

		    $this->enterRule($localContext, 0, self::RULE_result_column);

		    try {
		        $this->enterOuterAlt($localContext, 1);
		        $this->setState(24);
		        $this->match(self::IDENTIFIER);
		        $this->setState(27);
		        $this->errorHandler->sync($this);
		        $_la = $this->input->LA(1);

		        if ($_la === self::DOT) {
		        	$this->setState(25);
		        	$this->match(self::DOT);
		        	$this->setState(26);
		        	$this->match(self::IDENTIFIER);
		        }
		        $this->setState(33);
		        $this->errorHandler->sync($this);
		        $_la = $this->input->LA(1);

		        if (((($_la) & ~0x3f) === 0 && ((1 << $_la) & ((1 << self::AS_) | (1 << self::STRING_LITERAL) | (1 << self::IDENTIFIER))) !== 0)) {
		        	$this->setState(30);
		        	$this->errorHandler->sync($this);
		        	$_la = $this->input->LA(1);

		        	if ($_la === self::AS_) {
		        		$this->setState(29);
		        		$this->match(self::AS_);
		        	}
		        	$this->setState(32);
		        	$this->column_alias();
		        }
		    } catch (RecognitionException $exception) {
		        $localContext->exception = $exception;
		        $this->errorHandler->reportError($this, $exception);
		        $this->errorHandler->recover($this, $exception);
		    } finally {
		        $this->exitRule();
		    }

		    return $localContext;
		}

		/**
		 * @throws RecognitionException
		 */
		public function column_alias() : Context\Column_aliasContext
		{
		    $localContext = new Context\Column_aliasContext($this->ctx, $this->getState());

		    $this->enterRule($localContext, 2, self::RULE_column_alias);

		    try {
		        $this->enterOuterAlt($localContext, 1);
		        $this->setState(35);

		        $_la = $this->input->LA(1);

		        if (!($_la === self::STRING_LITERAL || $_la === self::IDENTIFIER)) {
		        $this->errorHandler->recoverInline($this);
		        } else {
		        	if ($this->input->LA(1) === Token::EOF) {
		        	    $this->matchedEOF = true;
		            }

		        	$this->errorHandler->reportMatch($this);
		        	$this->consume();
		        }
		    } catch (RecognitionException $exception) {
		        $localContext->exception = $exception;
		        $this->errorHandler->reportError($this, $exception);
		        $this->errorHandler->recover($this, $exception);
		    } finally {
		        $this->exitRule();
		    }

		    return $localContext;
		}

		/**
		 * @throws RecognitionException
		 */
		public function literal_value() : Context\Literal_valueContext
		{
		    $localContext = new Context\Literal_valueContext($this->ctx, $this->getState());

		    $this->enterRule($localContext, 4, self::RULE_literal_value);

		    try {
		        $this->enterOuterAlt($localContext, 1);
		        $this->setState(37);

		        $_la = $this->input->LA(1);

		        if (!(((($_la) & ~0x3f) === 0 && ((1 << $_la) & ((1 << self::FALSE_) | (1 << self::NOW_) | (1 << self::NULL_) | (1 << self::TRUE_) | (1 << self::NUMERIC_LITERAL) | (1 << self::STRING_LITERAL))) !== 0))) {
		        $this->errorHandler->recoverInline($this);
		        } else {
		        	if ($this->input->LA(1) === Token::EOF) {
		        	    $this->matchedEOF = true;
		            }

		        	$this->errorHandler->reportMatch($this);
		        	$this->consume();
		        }
		    } catch (RecognitionException $exception) {
		        $localContext->exception = $exception;
		        $this->errorHandler->reportError($this, $exception);
		        $this->errorHandler->recover($this, $exception);
		    } finally {
		        $this->exitRule();
		    }

		    return $localContext;
		}

		/**
		 * @throws RecognitionException
		 */
		public function predicate_expression() : Context\Predicate_expressionContext
		{
		    $localContext = new Context\Predicate_expressionContext($this->ctx, $this->getState());

		    $this->enterRule($localContext, 6, self::RULE_predicate_expression);

		    try {
		        $this->enterOuterAlt($localContext, 1);
		        $this->setState(39);
		        $this->column_name();
		        $this->setState(74);
		        $this->errorHandler->sync($this);

		        switch ($this->getInterpreter()->adaptivePredict($this->input, 9, $this->ctx)) {
		        	case 1:
		        	    $this->setState(40);

		        	    $_la = $this->input->LA(1);

		        	    if (!(((($_la) & ~0x3f) === 0 && ((1 << $_la) & ((1 << self::ASSIGN) | (1 << self::LT) | (1 << self::LT_EQ) | (1 << self::GT) | (1 << self::GT_EQ) | (1 << self::NOT_EQ1))) !== 0))) {
		        	    $this->errorHandler->recoverInline($this);
		        	    } else {
		        	    	if ($this->input->LA(1) === Token::EOF) {
		        	    	    $this->matchedEOF = true;
		        	        }

		        	    	$this->errorHandler->reportMatch($this);
		        	    	$this->consume();
		        	    }
		        	    $this->setState(41);
		        	    $this->literal_value();
		        	break;

		        	case 2:
		        	    $this->setState(43);
		        	    $this->errorHandler->sync($this);
		        	    $_la = $this->input->LA(1);

		        	    if ($_la === self::NOT_) {
		        	    	$this->setState(42);
		        	    	$this->match(self::NOT_);
		        	    }
		        	    $this->setState(48);
		        	    $this->errorHandler->sync($this);

		        	    switch ($this->input->LA(1)) {
		        	        case self::LIKE_:
		        	        	$this->setState(45);
		        	        	$this->match(self::LIKE_);
		        	        	break;

		        	        case self::GLOB_:
		        	        	$this->setState(46);
		        	        	$this->match(self::GLOB_);
		        	        	break;

		        	        case self::FALSE_:
		        	        case self::NOW_:
		        	        case self::NULL_:
		        	        case self::TRUE_:
		        	        case self::NUMERIC_LITERAL:
		        	        case self::STRING_LITERAL:
		        	        	$this->setState(47);
		        	        	$this->literal_value();
		        	        	break;

		        	    default:
		        	    	throw new NoViableAltException($this);
		        	    }
		        	break;

		        	case 3:
		        	    $this->setState(51);
		        	    $this->errorHandler->sync($this);
		        	    $_la = $this->input->LA(1);

		        	    if ($_la === self::NOT_) {
		        	    	$this->setState(50);
		        	    	$this->match(self::NOT_);
		        	    }
		        	    $this->setState(53);
		        	    $this->match(self::BETWEEN_);
		        	    $this->setState(54);
		        	    $this->literal_value();
		        	    $this->setState(55);
		        	    $this->match(self::AND_);
		        	    $this->setState(56);
		        	    $this->literal_value();
		        	break;

		        	case 4:
		        	    $this->setState(59);
		        	    $this->errorHandler->sync($this);
		        	    $_la = $this->input->LA(1);

		        	    if ($_la === self::NOT_) {
		        	    	$this->setState(58);
		        	    	$this->match(self::NOT_);
		        	    }
		        	    $this->setState(61);
		        	    $this->match(self::IN_);
		        	    $this->setState(62);
		        	    $this->match(self::OPEN_PAR);
		        	    $this->setState(71);
		        	    $this->errorHandler->sync($this);
		        	    $_la = $this->input->LA(1);

		        	    if (((($_la) & ~0x3f) === 0 && ((1 << $_la) & ((1 << self::FALSE_) | (1 << self::NOW_) | (1 << self::NULL_) | (1 << self::TRUE_) | (1 << self::NUMERIC_LITERAL) | (1 << self::STRING_LITERAL))) !== 0)) {
		        	    	$this->setState(63);
		        	    	$this->literal_value();
		        	    	$this->setState(68);
		        	    	$this->errorHandler->sync($this);

		        	    	$_la = $this->input->LA(1);
		        	    	while ($_la === self::COMMA) {
		        	    		$this->setState(64);
		        	    		$this->match(self::COMMA);
		        	    		$this->setState(65);
		        	    		$this->literal_value();
		        	    		$this->setState(70);
		        	    		$this->errorHandler->sync($this);
		        	    		$_la = $this->input->LA(1);
		        	    	}
		        	    }
		        	    $this->setState(73);
		        	    $this->match(self::CLOSE_PAR);
		        	break;
		        }
		    } catch (RecognitionException $exception) {
		        $localContext->exception = $exception;
		        $this->errorHandler->reportError($this, $exception);
		        $this->errorHandler->recover($this, $exception);
		    } finally {
		        $this->exitRule();
		    }

		    return $localContext;
		}
